--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
 
       <!-- تصویر -->
       <div style="width:120px; height:120px; border-radius:50%; overflow:hidden; border:3px solid hsl(27,79%,52%);">
-        <img src="/wallpaper.png" alt="سهند رنجبری‌پور" style="width:100%; height:100%; object-fit:cover;">
+        <img src="wallpaper.png" alt="سهند رنجبری‌پور" style="width:100%; height:100%; object-fit:cover;">
       </div>
 
       <!-- متن معرفی -->
