--- a/bio.html
+++ b/bio.html
@@ -9,7 +9,7 @@
 
     <!-- عنوان بخش -->
     <div class="fadeIn">
-      <h2 style="font-size:2.5rem; font-weight:700; margin-bottom:1rem;">درباره سهند رنجبری‌پور</h2>
+      <h2 style="font-size:2.5rem; font-weight:700; margin-bottom:1rem;">چشم‌انداز و مدیریت</h2>
       <div style="width:80px; height:4px; background:hsl(27,79%,52%); margin:0 auto 2rem auto; border-radius:1rem;"></div>
     </div>
 
@@ -23,7 +23,7 @@
 
       <!-- متن معرفی -->
       <p style="font-size:1.1rem; line-height:1.8; text-align:center;">
-        سهند رنجبری‌پور با تجربه عملی در زمینه تولید و واردات، بنیان‌گذار گروه <strong style="color:hsl(27,79%,52%);">Sahand Apex</strong> است. هدف او ارائه راهکارهای قابل اعتماد و با کیفیت به کسب‌وکارها و فروشگاه‌هاست.
+       ما در گروه <strong>Sahand Apex</strong> با شبکه‌ای گسترده از تأمین‌کنندگان داخلی و خارجی، محصولات <strong>ملزومات اداری</strong> و <strong>پت‌شاپ</strong> را با <strong>کیفیت بالا</strong> و در <strong>زمان مناسب</strong> برای فروشگاه‌ها و کسب‌وکارها فراهم می‌کنیم، حتی محصولاتی که معمولاً در بازار ایران موجود نیستند. با <strong>پشتیبانی حرفه‌ای</strong> و خدمات دقیق، تجربه‌ای <strong>مطمئن، ارزشمند و پایدار</strong> برای مشتریان ایجاد می‌کنیم. این گروه به مدیریت <strong>سهند رنجبری‌پور</strong>، مهندس، بازرگان و بنیان‌گذار <strong>Sahand Apex</strong> اداره می‌شود و همواره بر <strong>کیفیت و اعتماد</strong> در هر همکاری تأکید دارد.
       </p>
 
       <!-- شبکه‌های اجتماعی -->
