--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,11 @@
 <!-- bio.html -->
 <section id="bio" style="position:relative; min-height:70vh; font-family:'Vazirmatn','IBM Plex Sans',sans-serif; background:hsl(0,0%,98%); color:hsl(210,100%,20%); overflow:hidden; padding:6rem 1rem;">
-
+<style>.contact-info a:hover {
+  color: hsl(27,79%,60%);
+  transform: translateY(-2px);
+  transition: 0.3s all;
+}
+</style>
   <!-- پس‌زمینه دکوری با نور -->
   <div style="position:absolute; top:-80px; left:-80px; width:300px; height:300px; background:rgba(27,79,52,0.08); border-radius:50%; filter:blur(120px); animation:float 8s ease-in-out infinite;"></div>
   <div style="position:absolute; bottom:-100px; right:-60px; width:350px; height:350px; background:rgba(230,126,34,0.06); border-radius:50%; filter:blur(150px); animation:float 7s ease-in-out infinite 1s;"></div>
@@ -25,6 +30,12 @@
       <p style="font-size:1.1rem; line-height:1.8; text-align:center;">
        ما در گروه <strong>Sahand Apex</strong> با شبکه‌ای گسترده از تأمین‌کنندگان داخلی و خارجی، محصولات <strong>ملزومات اداری</strong> و <strong>پت‌شاپ</strong> را با <strong>کیفیت بالا</strong> و در <strong>زمان مناسب</strong> برای فروشگاه‌ها و کسب‌وکارها فراهم می‌کنیم، حتی محصولاتی که معمولاً در بازار ایران موجود نیستند. با <strong>پشتیبانی حرفه‌ای</strong> و خدمات دقیق، تجربه‌ای <strong>مطمئن، ارزشمند و پایدار</strong> برای مشتریان ایجاد می‌کنیم. این گروه به مدیریت <strong>سهند رنجبری‌پور</strong>، مهندس، بازرگان و بنیان‌گذار <strong>Sahand Apex</strong> اداره می‌شود و همواره بر <strong>کیفیت و اعتماد</strong> در هر همکاری تأکید دارد.
       </p>
+      <!-- شماره تماس -->
+<div class="contact-info fadeIn" style="margin-top:1.5rem; display:flex; flex-direction:column; gap:0.75rem; font-size:1.1rem; text-align:center;">
+  <a href="tel:02634344754" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📞 026 34344754</a>
+  <a href="tel:09928292995" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📱 09928 292995</a>
+</div>
+
 
       <!-- شبکه‌های اجتماعی -->
       <div class="social-links" style="display:flex; gap:1rem; font-size:1.5rem;">
