--- a/bio.html
+++ b/bio.html
@@ -32,8 +32,8 @@
       </p>
       <!-- شماره تماس -->
 <div class="contact-info fadeIn" style="margin-top:1.5rem; display:flex; flex-direction:column; gap:0.75rem; font-size:1.1rem; text-align:center;">
-  <a href="tel:02634344754" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📞 026 34344754</a>
-  <a href="tel:09928292995" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📱 09928 292995</a>
+  <a href="tel:02634344754" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📞3434 4754 026</a>
+  <a href="tel:09928292995" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📱8292 995 0992</a>
 </div>
 
 
