--- a/bio.html
+++ b/bio.html
@@ -32,17 +32,17 @@
       </p>
       <!-- شماره تماس -->
 <div class="contact-info fadeIn" style="margin-top:1.5rem; display:flex; flex-direction:column; gap:0.75rem; font-size:1.1rem; text-align:center;">
-  <a href="tel:02634344754" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📞3434 4754 026</a>
-  <a href="tel:09928292995" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📱8292 995 0992</a>
+  <a href="tel:02634344754" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📞02634344754</a>
+  <a href="tel:09928292995" style="color:hsl(27,79%,52%); text-decoration:none; font-weight:600;">📱09928292995</a>
 </div>
 
 
       <!-- شبکه‌های اجتماعی -->
-      <div class="social-links" style="display:flex; gap:1rem; font-size:1.5rem;">
-        <a href="https://linkedin.com" target="_blank" style="color:hsl(27,79%,52%); transition:0.3s;">🔗</a>
-        <a href="https://instagram.com" target="_blank" style="color:hsl(27,79%,52%); transition:0.3s;">📸</a>
-        <a href="https://twitter.com" target="_blank" style="color:hsl(27,79%,52%); transition:0.3s;">🐦</a>
-      </div>
+      <!-- <div class="social-links" style="display:flex; gap:1rem; font-size:1.5rem;">
+        <a href="https://linkedin.com" target="_blank" style="color:hsl(27,79%,52%); transition:0.3s;"></a>
+        <a href="https://instagram.com" target="_blank" style="color:hsl(27,79%,52%); transition:0.3s;"></a>
+        <a href="https://twitter.com" target="_blank" style="color:hsl(27,79%,52%); transition:0.3s;"></a>
+      </div> -->
 
     </div>
 
